--- a/codesamples/day08cssrevision/a05headerfooter/a14footer.css
+++ b/codesamples/day08cssrevision/a05headerfooter/a14footer.css
@@ -13,7 +13,8 @@
     background-color: #333;           /* Dark background */
     color: white;                     /* White text */
     padding: 20px;
-    flex-wrap: wrap;                  /* Allow sections to wrap on smaller screens */
+    flex-wrap: wrap; 
+    bottom: 0;                 /* Allow sections to wrap on smaller screens */
 }
 
 .footer-section {
