--- a/codesamples/day08cssrevision/a05headerfooter/a14footer.css
+++ b/codesamples/day08cssrevision/a05headerfooter/a14footer.css
@@ -14,7 +14,7 @@
     color: white;                     /* White text */
     padding: 20px;
     flex-wrap: wrap; 
-    bottom: 0;                 /* Allow sections to wrap on smaller screens */
+                    /* Allow sections to wrap on smaller screens */
 }
 
 .footer-section {
