--- a/codesamples/day08cssrevision/a06all/a05sales.css
+++ b/codesamples/day08cssrevision/a06all/a05sales.css
@@ -40,6 +40,7 @@
     grid-template-columns: 1fr 2fr 1fr 2fr;
     gap: 1px;
     background-color: #ddd;
+    overflow: scroll;
   }
   
   .header {
